plots updated and Feature engineering started

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 ## The .gitignore file specifies things that git should ignore. 
 ## This default template includes entries for R, Python and visual studio
 Newfolder
+.ipynb_checkpoints
 ##
 ## Add custom entries below here.
 ##
